--- a/home.html
+++ b/home.html
@@ -8,17 +8,50 @@
     <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="">
     <nav>
         <ul>
-        <li><a href="#Cleaning_Status">Cleaning Status</a></li>
+        <li><a href="index.html">Cleaning</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="testimonials">Testimonials</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#Contact">Contact</a></li>
+        <li><a href="login pw.html">Login Admin</a></li>
         </ul>
     </nav>
     <header>
         <h1>Welcome to RanShoes.id</h1>
         <h3>Premium Shoes Laundry</h3>
     </header>
+
+    <section id="about" class="1">
+        <div class="container">
+            <h1><u>About Us</u></h1>
+            <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="gambar 1">
+            <p>RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang.</p>
+        </div>
+    </section>
+
+    <section id="testimonials" class="2">
+        <div class="container">
+            <h1>Testimonials</h1>
+            <p>"Pelayanan sangat baik, kualitas servis memuaskan, harga sangat terjangkau. Very recommended place!."
+                <br>
+                Irwan Cheung</p>
+            <p>"Responnya bagus, hasilnya memuaskan, terbaiklah!!."
+                <br>
+                Fandeo Yudha</p>
+        </div>
+    </section>
+
+    <section id="Contact" class="3">
+        <div class="container">
+            <h1><u>Contact Us</u></h1>
+            <h3>RanShoes.id</h3>
+            <p>Phone: xxxxxxxxxbe <br>
+            Email: qqqqqqq@gmail.com <br>
+            Jl. Kaki No 123A</p>
+        </div>
+    </section>
+
     <footer>
+        <h1><u>Our Stores</u></h1>
         <iframe src="https://www.google.com/maps/embed?pb=!4v1718996699681!6m8!1m7!1stDffn6IS6HNjSt8vZ8bkLA!2m2!1d-7.030882413488015!2d110.4677585422649!3f341.5561229065808!4f-13.147294774512801!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
