--- a/login pw.html
+++ b/login pw.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
+    <meta charset="UTF-8">
     <title>RanShoes.id</title>
-    <link rel="shortcut icon" type="x - icon" href="title.png">
+    <link rel="shortcut icon" type="image/x-icon" href="title.png">
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -16,7 +18,7 @@
         <input type="submit" value="Login">
     </form>
     <div id="message"></div>
-    <div id="errorMessage" style="color:red;"></div>
+    <div id="errorMessage"></div>
     <script>
         var attemptCount = 0;
         const maxAttempts = 5;
@@ -31,7 +33,7 @@
             if (username === "DADANG") {
                 if (password === storedPassword) {
                     message.innerHTML = "<h2>Selamat datang</h2>";
-                    window.open("admin.html"); ///UBAH DISINI
+                    window.open("admin.html"); // Ubah di sini jika diperlukan
                     return true;
                 } else {
                     attemptCount++;
@@ -43,10 +45,10 @@
                     }
                 }
             } else {
-                errorMessage.textContent = "";
+                errorMessage.textContent = "Username salah, coba lagi!";
             }
 
-            message.innerHTML += "<p>Terimakasih Telah Mengunjungi Halaman Ini</p>";
+            message.innerHTML = "<p>Terimakasih Telah Mengunjungi Halaman Ini</p>";
             return false;
         }
     </script>
