--- a/login pw.html
+++ b/login pw.html
@@ -22,7 +22,7 @@
     <script>
         var attemptCount = 0;
         const maxAttempts = 5;
-        const storedPassword = "2307413003"; // Contoh password yang benar
+        const storedPassword = "12345"; // Contoh password yang benar
 
         function validateForm() {
             var username = document.getElementById("username").value.toUpperCase();
