--- a/home.html
+++ b/home.html
@@ -23,8 +23,7 @@
     <section id="about" class="1">
         <div class="container">
             <h1><u>About Us</u></h1>
-            <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="gambar 1">
-            <p>RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang.</p>
+            <p class="ran">RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang.</p>
         </div>
     </section>
 
