--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="ran.css">
 </head>
 <body>
-    <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="">
     <nav>
+        <img src="title.png" alt="png" class="gambar1">
         <ul>
         <li><a href="index.html">Cleaning</a></li>
         <li><a href="#about">About</a></li>
@@ -15,6 +15,7 @@
         <li><a href="login pw.html">Login Admin</a></li>
         </ul>
     </nav>
+    <img src="laundry-sepatu.jpg" alt="gambar 0" class="gambar">
     <header>
         <h1>Welcome to RanShoes.id</h1>
         <h3>Premium Shoes Laundry</h3>
@@ -23,19 +24,22 @@
     <section id="about" class="1">
         <div class="container">
             <h1><u>About Us</u></h1>
-            <p class="ran">RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang.</p>
+            <p class="ran">RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang. 
+                Di RanShoes.id, kami memahami bahwa sepatu Anda lebih dari sekadar alas kaki—mereka adalah 
+                cerminan dari gaya, kepribadian, dan gaya hidup Anda. Didirikan dengan hasrat untuk menjaga sepatu 
+                favorit Anda tetap terlihat terbaik, RanShoes.id mengkhususkan diri dalam layanan cuci dan perawatan 
+                sepatu profesional.</p>
         </div>
     </section>
 
     <section id="testimonials" class="2">
         <div class="container">
             <h1>Testimonials</h1>
-            <p>"Pelayanan sangat baik, kualitas servis memuaskan, harga sangat terjangkau. Very recommended place!."
-                <br>
-                Irwan Cheung</p>
-            <p>"Responnya bagus, hasilnya memuaskan, terbaiklah!!."
-                <br>
-                Fandeo Yudha</p>
+            <p>"Pelayanan sangat baik, kualitas servis memuaskan, harga sangat terjangkau. Very recommended place!."</p>
+            <p>- Irwan Cheung</p>
+            <br>
+            <p>"Responnya bagus, hasilnya memuaskan, terbaiklah!!."</p>
+            <p>- Fandeo Yudha</p>
         </div>
     </section>
 
@@ -43,9 +47,9 @@
         <div class="container">
             <h1><u>Contact Us</u></h1>
             <h3>RanShoes.id</h3>
-            <p>Phone: xxxxxxxxxbe <br>
+            <p>Phone: xxxxxxxxx<br>
             Email: qqqqqqq@gmail.com <br>
-            Jl. Kaki No 123A</p>
+            Jl. Ketileng Raya, Semarang, Jawa Tengah</p>
         </div>
     </section>
 
