--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <title>RanShoes.id</title>
+    <link rel="shortcut icon" type="x - icon" href="title.png">
     <meta charset="UTF-8"> <!-- Menentukan karakter set dokumen sebagai UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Membuat halaman responsif dengan menetapkan lebar tampilan ke lebar perangkat -->
     <title>Buku Tamu</title> <!-- Judul halaman yang muncul di tab browser -->
