--- a/home.html
+++ b/home.html
@@ -5,18 +5,19 @@
     <link rel="stylesheet" href="ran.css">
 </head>
 <body>
-    <nav>
-        <img src="title.png" alt="png" class="gambar1">
-        <ul>
-        <li><a href="index.html">Cleaning</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#Contact">Contact</a></li>
-        <li><a href="login pw.html">Login Admin</a></li>
-        </ul>
-    </nav>
-    <img src="laundry-sepatu.jpg" alt="gambar 0" class="gambar">
     <header>
+        <nav>
+            <img src="title.png" alt="png" class="gambar1">
+            <ul>
+            <li><a href="index.html">Cleaning</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#Contact">Contact</a></li>
+            <li><a href="login pw.html">Login Admin</a></li>
+            </ul>
+        </nav>
+    
+    
         <h1>Welcome to RanShoes.id</h1>
         <h3>Premium Shoes Laundry</h3>
     </header>
@@ -47,7 +48,7 @@
         <div class="container">
             <h1><u>Contact Us</u></h1>
             <h3>RanShoes.id</h3>
-            <p>Phone: xxxxxxxxx<br>
+            <p><a href="https://wa.me/+6287771204269" style="color: white;" class="watsap">Whatsapp</a><br>
             Email: qqqqqqq@gmail.com <br>
             Jl. Ketileng Raya, Semarang, Jawa Tengah</p>
         </div>
