--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#Contact">Contact</a></li>
+            <li><a href="#store">Our Stores</a></li>
             <li><a href="login pw.html">Login Admin</a></li>
             </ul>
         </nav>
@@ -54,8 +55,9 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="store" class="4">
         <h1><u>Our Stores</u></h1>
         <iframe src="https://www.google.com/maps/embed?pb=!4v1718996699681!6m8!1m7!1stDffn6IS6HNjSt8vZ8bkLA!2m2!1d-7.030882413488015!2d110.4677585422649!3f341.5561229065808!4f-13.147294774512801!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Semarang, Jawa Tengah</p>
     </footer>
 </body>
