--- a/Home/home.html
+++ b/Home/home.html
@@ -3,17 +3,24 @@
     <title>RanShoes.id</title>
     <link rel="shortcut icon" type="x - icon" href="title.png">
     <link rel="stylesheet" href="ran.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     <nav>
-        <img src="title.png" alt="png" class="gambar1">
+        <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="png" class="gambar1">
         <ul class="nap">
         <li><a href="index.html">Cleaning</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#Contact">Contact</a></li>
         <li><a href="#store">Our Stores</a></li>
-        <li><a href="login pw.html">Login Admin</a></li>
+        <li><a href="login pw.html"><i class="bx bxs-user-pin"></i></a></li>
         </ul>
     </nav>
     
@@ -42,7 +49,7 @@
 
     <section id="about" class="1">
         <div class="container">
-            <h1><u>About Us</u></h1>
+            <h1>About Us</h1>
             <p class="ran">RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang. 
                 Di RanShoes.id, kami memahami bahwa sepatu Anda lebih dari sekadar alas kaki—mereka adalah 
                 cerminan dari gaya, kepribadian, dan gaya hidup Anda. Didirikan dengan hasrat untuk menjaga sepatu 
