--- a/Home/home.html
+++ b/Home/home.html
@@ -58,14 +58,32 @@
         </div>
     </section>
 
-    <section id="testimonials" class="2">
-        <div class="container">
-            <h1>Testimonials</h1>
-            <p>"Pelayanan sangat baik, kualitas servis memuaskan, harga sangat terjangkau. Very recommended place!."</p>
-            <p>- Irwan Cheung</p>
+    <section id="testimonials" class="testimonials">
+        <h2>Testimonial</h2>
+        <div class="testimonial-container">
+            <div class="testimonial">
+                <div class="stars">★★★★★</div>
+                <p>"Ini mah bintang 5 lewat, kalo bisa dikasih bintang 5KBBI udah gua kasih. Enak banget gaoob abatt!!!"</p>
+                <p class="author">Hafi<br><span>Full Stack Developer</span></p>
+            </div>
             <br>
-            <p>"Responnya bagus, hasilnya memuaskan, terbaiklah!!."</p>
-            <p>- Fandeo Yudha</p>
+            <div class="testimonial">
+                <div class="stars">★★★★★</div>
+                <p>"Sumpah, makan di sini tuh nggak pernah bosen! Semua menunya juara, dari appetizer sampai dessert. Kamu wajib coba deh!"</p>
+                <p class="author">Beckschen<br><span>Jak RTS</span></p>
+            </div>
+            <br>
+            <div class="testimonial">
+                <div class="stars">★★★★★</div>
+                <p>"Tempat ini tuh bikin betah nongkrong lama-lama. Interiornya cozy, terus makanannya enak banget. Pas buat nongkrong bareng bestie!"</p>
+                <p class="author">Alim<br><span>Mechanism</span></p>
+            </div>
+            <br>
+            <div class="testimonial">
+                <div class="stars">★★★★★</div>
+                <p>"Udah nggak diragukan lagi sih, makanan di sini beneran matul alias mantap betul! Rasanya nendang, porsinya pas, harga juga nggak bikin kantong jebol!"</p>
+                <p class="author">Aufa<br><span>Jungler EVOS</span></p>
+            </div>
         </div>
     </section>
 
