--- a/Home/home.html
+++ b/Home/home.html
@@ -51,7 +51,7 @@
         <div class="container">
             <h1>About Us</h1>
             <p class="ran">RanShoes.id adalah salah satu jasa untuk membersihkan dan merawat sepatu di Semarang. 
-                Di RanShoes.id, kami memahami bahwa sepatu Anda lebih dari sekadar alas kaki—mereka adalah 
+                Di RanShoes.id, kami memahami bahwa sepatu Anda lebih dari sekadar alas kaki, mereka adalah 
                 cerminan dari gaya, kepribadian, dan gaya hidup Anda. Didirikan dengan hasrat untuk menjaga sepatu 
                 favorit Anda tetap terlihat terbaik, RanShoes.id mengkhususkan diri dalam layanan cuci dan perawatan 
                 sepatu profesional.</p>
@@ -69,19 +69,22 @@
             <br>
             <div class="testimonial">
                 <div class="stars">★★★★★</div>
-                <p>"Sumpah, makan di sini tuh nggak pernah bosen! Semua menunya juara, dari appetizer sampai dessert. Kamu wajib coba deh!"</p>
+                <p>"Saya sangat puas dengan layanan cuci sepatu di sini. Sepatu saya yang tadinya kotor dan kusam sekarang terlihat seperti baru lagi. 
+                    Prosesnya cepat dan hasilnya memuaskan. Terima kasih!"</p>
                 <p class="author">Beckschen<br><span>Jak RTS</span></p>
             </div>
             <br>
             <div class="testimonial">
                 <div class="stars">★★★★★</div>
-                <p>"Tempat ini tuh bikin betah nongkrong lama-lama. Interiornya cozy, terus makanannya enak banget. Pas buat nongkrong bareng bestie!"</p>
+                <p>"Layanan yang sangat profesional dan ramah. Sepatu sneakers kesayangan saya dibersihkan dengan sangat teliti dan hasilnya luar biasa. 
+                    Saya pasti akan kembali lagi!"</p>
                 <p class="author">Alim<br><span>Mechanism</span></p>
             </div>
             <br>
             <div class="testimonial">
                 <div class="stars">★★★★★</div>
-                <p>"Udah nggak diragukan lagi sih, makanan di sini beneran matul alias mantap betul! Rasanya nendang, porsinya pas, harga juga nggak bikin kantong jebol!"</p>
+                <p>"Saya sangat terkesan dengan kualitas layanan cuci sepatu di sini. Sepatu kulit saya yang tadinya penuh noda sekarang bersih dan kinclong. 
+                    Harga juga sangat terjangkau. Highly recommended!"</p>
                 <p class="author">Aufa<br><span>Jungler EVOS</span></p>
             </div>
         </div>
