--- a/Home/index.html
+++ b/Home/index.html
@@ -173,7 +173,7 @@
     <div class="order-section">
         <div class="header">
             <img src="title.png" alt="Logo" width="50">
-            <h1>Order Shoe Cleaning</h1>
+            <h1>Order Shoes Cleaning</h1>
         </div>
         <form id="orderForm">
             <h2>Customer Information</h2>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="service-section">
-                <h3>Color Restoration</h3>
+                <h3>Shoes Laundry</h3>
                 <label>Color Restoration (50 rb)</label>
                 <input type="number" name="color_restoration" min="0" value="0" data-price="50"><br>
             </div>
