--- a/Home/admin.html
+++ b/Home/admin.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Order List</title>
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="/WEBPASEP/CSS/admin.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="title.png" alt="Logo" width="50">
+            <img src="/WEBPASEP/image/title.png" alt="Logo" width="50">
             <h1>Order List</h1>
         </div>
         <table id="orderTable">
@@ -51,6 +51,6 @@
             </tbody>
         </table>
     </div>
-    <script src="admin.js"></script>
+    <script src="/WEBPASEP/JS/admin.js"></script>
 </body>
 </html>
