--- a/Home/home.html
+++ b/Home/home.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>RanShoes.id</title>
-    <link rel="shortcut icon" type="x - icon" href="title.png">
-    <link rel="stylesheet" href="ran.css">
+    <link rel="shortcut icon" type="x - icon" href="/WEBPASEP/image/title.png">
+    <link rel="stylesheet" href="/WEBPASEP/CSS/ran.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <img src="WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="png" class="gambar1">
+        <img src="/WEBPASEP/image/WhatsApp Image 2024-06-21 at 18.28.19_3f7c4dd2.jpg" alt="png" class="gambar1">
         <ul class="nap">
         <li><a href="index.html">Cleaning</a></li>
         <li><a href="#about">About</a></li>
@@ -33,17 +33,17 @@
     <div class="slideshow-container" align="center">
     <h1 align = "center">INFORMATION!!!</h1>
         <div class="mySlides fade">
-        <img src="Ranshoes.id.png" width="100%">
+        <img src="/WEBPASEP/image/Ranshoes.id.png" width="100%">
         <div class="text"></div>
         </div>
   
         <div class="mySlides fade">
-        <img src="Ranshoes.id2.png" width="100%">
+        <img src="/WEBPASEP/image/Ranshoes.id2.png" width="100%">
         <div class="text"></div>
     </div>
   
     <div class="mySlides fade">
-      <img src="Ranshoes.id3.png" width="100%">
+      <img src="/WEBPASEP/image/Ranshoes.id3.png" width="100%">
       <div class="text"></div>
     </div>
 
@@ -107,8 +107,8 @@
     </section>
     
     <footer id="futer" class="ajy">
-        <p>RanShoes.id &copy; 2024, ALL Right Reserved</p>
+        <p>Copyright &copy; RanShoes.id, 2024</p>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="/WEBPASEP/JS/home.js"></script>
 </body>
