--- a/Home/index.html
+++ b/Home/index.html
@@ -172,7 +172,7 @@
 <body>
     <div class="order-section">
         <div class="header">
-            <img src="title.png" alt="Logo" width="50">
+            <img src="/WEBPASEP/image/title.png" alt="Logo" width="50">
             <h1>Order Shoes Cleaning</h1>
         </div>
         <form id="orderForm">
