--- a/Home/login pw.html
+++ b/Home/login pw.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>RanShoes.id</title>
-    <link rel="shortcut icon" type="image/x-icon" href="title.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/WEBPASEP/image/images.png">
+    <link rel="stylesheet" href="/WEBPASEP/CSS/login.css">
 </head>
 <body>
     <h1>Welcome back</h1>
