--- a/Home/reset_password.html
+++ b/Home/reset_password.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>RanShoes.id</title>
-    <link rel="shortcut icon" type="x - icon" href="title.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="shortcut icon" type="x - icon" href="/WEBPASEP/image/title.png">
+    <link rel="stylesheet" href="/WEBPASEP/CSS/login.css">
 </head>
 <body>
     <h1>Reset Password</h1>
